Ajax Calls with Jquery, Fetch w/ promises,and  XMLHTTP are now complete

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ajax Exercises</title>
 </head>
 <body>
-
+<header>Json and Ajax exercises</header>
+<div id="clickable">
+    <a href="">See Different Post's</a>
+</div>
+<div></div>
+<button id="btn">Retrieve posts with comments</button>
+<button id="todo_btn">Fetch user and their Todo's</button>
+<div id="output_posts"></div>
+<div id="posts_info"></div>
+<div id="todo_info"></div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="methods.js"></script>
 </html>
